tests/dockerfile/graph_builder/checks/resources/RunYumNoGpgCheck/fail/Dockerfile.dnf
FROM fedora:rawhide
RUN dnf install -y --nogpgcheck python3
RUN dnf --nogpgcheck install -y python3
RUN dnf \
    --nogpgcheck \
    install python3
RUN dnf \
    install -y python3 \
    --nogpgcheck
RUN echo "prodsec" && dnf --nogpgcheck -y install python3
